Change appearance a bit. Black everything.
git-svn-id: http://zyao.unfuddle.com/svn/zyao_iphoneapps/trunk@122 8c287f6f-53b1-4db0-8e59-0c5774308c12

--- a/iBus-Universal/Info.plist
+++ b/iBus-Universal/Info.plist
@@ -26,5 +26,7 @@
 	<true/>
 	<key>NSMainNibFile</key>
 	<string>MainWindow</string>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleOpaqueBlack</string>
 </dict>
 </plist>
